--- a/src/index.css
+++ b/src/index.css
@@ -50,3 +50,30 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+  min-height: 100vh;
+
+  background: var(--app-background-gradient);
+}
+
+/* ============================================
+   ГЛОБАЛЬНЫЕ ПЕРЕМЕННЫЕ
+   ============================================ */
+:root {
+  --color-dark: #2b2b2b;
+  --color-white: #ffffff;
+  --color-turquoise: #37dbff;
+  --color-turquoise-light: #b1f1ff;
+}
+
+:root {
+  --app-background-gradient: linear-gradient(
+    180deg,
+    var(--color-white) 0%,
+    var(--color-turquoise-light) 100%
+  );
+}
